--- a/app/src/main/res/layout/activity_recommended_caloric_intake.xml
+++ b/app/src/main/res/layout/activity_recommended_caloric_intake.xml
@@ -100,11 +100,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="16dp"
         android:onClick="button5"
         android:text="Exercise!"
         android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:onClick="referenceButton"
+        android:text="References"
+        app:layout_constraintBaseline_toBaselineOf="@+id/runButton"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintStart_toEndOf="@+id/runButton" />
 
 </android.support.constraint.ConstraintLayout>
